--- a/language/namespaces.xml
+++ b/language/namespaces.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!-- $Revision: 1.1 $ -->
+<?xml version="1.0" encoding="utf-8"?>
+<!-- EN-Revision: 1.4 Maintainer: acidd15 Status: wip -->
 <chapter xml:id="language.namespaces" xmlns="http://docbook.org/ns/docbook"
  version="1.1">
  <title>네임스페이스</title>
